Update instruction manual

--- a/src/main/resources/assets/grimworld/lang/en_US.lang
+++ b/src/main/resources/assets/grimworld/lang/en_US.lang
@@ -80,11 +80,11 @@ item.gunpowder_reed_item.name=Gunpowder Reeds
 item.fungicide.name=Fungicidal Spray
 
 #================= INSTRUCTION MANUAL =================#
-grim.manual.grimworld.modinfo=Adds in world generation and entities.
+grim.manual.grimworld.modinfo=Adds in world generation and entities and some awesome fungus!
 grim.manual.grimworld.subsection.people=More People
-grim.manual.grimworld.subsection.people.page.notch=The first person added with this mod is Minecraft's creator Notch. Notch holds a Diamond Sword and when attacked will attack you. He also drops apples.
+grim.manual.grimworld.subsection.people.page.notch=Notch holds a Diamond Sword and when attacked will attack you. He also drops apples.
 grim.manual.grimworld.subsection.people.page.notch.title=Notch
-grim.manual.grimworld.subsection.people.page.farmer=A farmer is also added in this mod. The farm roams around and will attack if you attack it. They hold a Wooden Hoe and can drop wheat when killed.
+grim.manual.grimworld.subsection.people.page.farmer=The farmer roams around and will attack if you attack it. They hold a Wooden Hoe and can drop wheat when killed.
 grim.manual.grimworld.subsection.people.page.farmer.title=Farmer
 grim.manual.grimworld.subsection.people.page.lumber=The lumberjack roams around and holds a Wooden Axe. He will also attack you if you attack him and he has a chance of dropping wood and sticks.
 grim.manual.grimworld.subsection.people.page.lumber.title=Lumberjack
@@ -95,7 +95,7 @@ grim.manual.grimworld.subsection.people.page.psycho.title=Psychopath
 grim.manual.grimworld.subsection.people.page.suicide=The suicide bomber will run at you and attack you and when attacked he will explode.
 grim.manual.grimworld.subsection.people.page.suicide.title=Suicide Bomber
 grim.manual.grimworld.subsection.randomite=Randomite
-grim.manual.grimworld.subsection.randomite.page.info=Randomite adds in one new ore that generates in your world. This ore has a chance to drop any of the ores in Minecraft and even an egg.
+grim.manual.grimworld.subsection.randomite.page.info=Randomite has a chance to drop any of the ores in Minecraft and even an egg.
 grim.manual.grimworld.subsection.randomite.page.info.title=Info
 grim.manual.grimworld.subsection.greed=Gunpowder Reeds
 grim.manual.grimworld.subsection.greed.page.recipes=Gunpowder Reeds naturally generate around the world but if you would like to get started right away you can craft them yourself. They are like vanilla reeds in that they must be next to water and only grow 3 high. They also must be planted on dirt or sand.
@@ -110,34 +110,32 @@ grim.manual.grimworld.subsection.wells=Desert Wells
 grim.manual.grimworld.subsection.wells.page.info=Desert Wells changes the way natural Desert Wells spawn in. They add varied depth and also loot to them so it gives you a reason to explore them.
 grim.manual.grimworld.subsection.wells.page.info.title=Info
 grim.manual.grimworld.subsection.corruption=Corruption
-grim.manual.grimworld.subsection.corruption.page.info=This mod adds in one block which corrupts your minecraft world. It transforms other blocks surrounding it with a block of netherrack, soul sand, or another corruption block. It can also spawn fires which is configurable and the block is only obtainable from the nether.
+grim.manual.grimworld.subsection.corruption.page.info=Corruption block will start to 'corrupt' your world by converting everything to the Nether. It transforms other blocks surrounding it with a block of netherrack, soul sand, or another corruption block. It can also spawn fires which is configurable and the block is only obtainable from the nether.
 grim.manual.grimworld.subsection.corruption.page.info.title=Info
 grim.manual.grimworld.subsection.pixie=Ice Pixie
-grim.manual.grimworld.subsection.pixie.page.info=This mod adds in one new entity that spawn in snowy biomes, an Ice Pixie. The Ice Pixie will attack players but cannot be hurt by players. It can only be hurt when surrounded by torches.
+grim.manual.grimworld.subsection.pixie.page.info=Ice Pixie are annoying little guys found in snowy environments. The Ice Pixie will attack players but cannot be hurt by players. It can only be hurt when surrounded by torches.
 grim.manual.grimworld.subsection.pixie.page.info.title=Info
 grim.manual.grimworld.subsection.treasure=Treasure
-grim.manual.grimworld.subsection.treasure.page.info=This mod adds in a new mob that is a Treasure Chest. When killed it has a chance to drop a variety of different items from bread to diamonds.
+grim.manual.grimworld.subsection.treasure.page.info=Treasure Chests can be found wandering around. When killed it has a chance to drop a variety of different items from bread to diamonds.
 grim.manual.grimworld.subsection.treasure.page.info.title=Info
 grim.manual.grimworld.subsection.worldgen=World Gen Expanded
 grim.manual.grimworld.subsection.worldgen.page.info=World Gen Expanded adds in many new world generation features. It generates melons, wheat patches, stumps and saplings and cactus fields and sandstone pillars in Deserts. All generation can be configured if they spawn and how frequent they spawn.
 grim.manual.grimworld.subsection.worldgen.page.info.title=Info
-grim.manual.grimworld.subsection.basic=Basic Fungi
-grim.manual.grimworld.subsection.basic.page.green=Green fungi will be needed to make any of the colored fungi. All basic fungi doesn't really have a purpose except to grow and keep growing unless boxed in. Basic fungi will replace liquid and weak blocks. Breaking fungi with your hand can drop a slimeball, using a sword will drop the block itself. Basic Fungi have two types the normal and rapid, rapid grows faster.
-grim.manual.grimworld.subsection.basic.page.green.title=Green Fungi
-grim.manual.grimworld.subsection.basic.page.color=Colored fungi are just colored versions of the green variety. Grows unless enclosed, replaces liquid and weak blocks, breaking fungus with a hand can drop a slimeball, breaking them with a sword drops the block itself, and their are two types normal and rapid which rapid grows faster. The colors to choose from are <f>4<f>lRED<f>0<f>r, <f>2<f>lGREEN<f>0<f>r, <f>1<f>lBLUE<f>0<f>r, <f>5<f>lPURPLE<f>0<f>r, <f>e<f>lYELLOW<f>0<f>r, <f>6<f>lORANGE<f>0<f>r, <f>d<f>lPINK<f>0<f>r, <f>b<f>lCYAN<f>0<f>r.
-grim.manual.grimworld.subsection.basic.page.color.title=Colored Fungi
-grim.manual.grimworld.subsection.build=Building Fungi
-grim.manual.grimworld.subsection.build.page.build=Building Fungi as the name suggests build different types of blocks. THese include block builders which build blocks as they grow but will not grow higher than you placed the blocks. Layer builders build a flat layer of the block specified. And liquid builder are just block builders but for lava and water. Building blocks include Netherrack, Sand, Dirt, Stone, Cobble, StoneBricks, SandStone, Glass.
-grim.manual.grimworld.subsection.build.page.build.title=Building Fungi
-grim.manual.grimworld.subsection.build.page.maze=An experimental builder is the maze builder which when placed will start to build a maze. Like the other building fungi it will not grow upward but only down and to the sides.
-grim.manual.grimworld.subsection.build.page.maze.title=Maze Fungi
-grim.manual.grimworld.subsection.break=Eating Fungi
-grim.manual.grimworld.subsection.break.page.kill=Acid fungi are fungi that kill other fungi their are two types the regular and the rapid. One is all you need for a big group of fungi.
-grim.manual.grimworld.subsection.break.page.kill.title=Acid Fungi
-grim.manual.grimworld.subsection.break.page.blockEater=Another variety of fungus are the block eaters which eat a certain type of block by replacing the blocks they eat with themselves. The eater types are Stone, Rock, Dirt, Sand/Gravel, Leaves/Water, and one to target Forests. All eater types are configurable for which types of blocks they eat.
-grim.manual.grimworld.subsection.break.page.blockEater.title=Block Eaters
-grim.manual.grimworld.subsection.break.page.vert=A sub-species of the Block Eaters are the vertical eaters which instead of growing in any direction will not grow any lower than where they were placed. All eater types are configurable for which types of blocks they eat.
-grim.manual.grimworld.subsection.break.page.vert.title=Vert Block Eaters
+grim.manual.grimworld.subsection.fungus=Fungus
+grim.manual.grimworld.subsection.fungus.page.green=Green fungi will be needed to make any of the colored fungi. All basic fungi doesn't really have a purpose except to grow and keep growing unless boxed in. Basic fungi will replace liquid and weak blocks. Breaking fungi with your hand can drop a slimeball, using a sword will drop the block itself. Basic Fungi have two types the normal and rapid, rapid grows faster.
+grim.manual.grimworld.subsection.fungus.page.green.title=Green Fungi
+grim.manual.grimworld.subsection.fungus.page.color=Colored fungi are just colored versions of the green variety. Grows unless enclosed, replaces liquid and weak blocks, breaking fungus with a hand can drop a slimeball, breaking them with a sword drops the block itself, and their are two types normal and rapid which rapid grows faster. The colors to choose from are <f>4<f>lRED<f>0<f>r, <f>2<f>lGREEN<f>0<f>r, <f>1<f>lBLUE<f>0<f>r, <f>5<f>lPURPLE<f>0<f>r, <f>e<f>lYELLOW<f>0<f>r, <f>6<f>lORANGE<f>0<f>r, <f>d<f>lPINK<f>0<f>r, <f>b<f>lCYAN<f>0<f>r.
+grim.manual.grimworld.subsection.fungus.page.color.title=Colored Fungi
+grim.manual.grimworld.subsection.fungus.page.build=Building Fungi as the name suggests build different types of blocks. THese include block builders which build blocks as they grow but will not grow higher than you placed the blocks. Layer builders build a flat layer of the block specified. And liquid builder are just block builders but for lava and water. Building blocks include Netherrack, Sand, Dirt, Stone, Cobble, StoneBricks, SandStone, Glass.
+grim.manual.grimworld.subsection.fungus.page.build.title=Building Fungi
+grim.manual.grimworld.subsection.fungus.page.maze=An experimental builder is the maze builder which when placed will start to build a maze. Like the other building fungi it will not grow upward but only down and to the sides.
+grim.manual.grimworld.subsection.fungus.page.maze.title=Maze Fungi
+grim.manual.grimworld.subsection.fungus.page.kill=Acid fungi are fungi that kill other fungi their are two types the regular and the rapid. One is all you need for a big group of fungi.
+grim.manual.grimworld.subsection.fungus.page.kill.title=Acid Fungi
+grim.manual.grimworld.subsection.fungus.page.blockEater=Another variety of fungus are the block eaters which eat a certain type of block by replacing the blocks they eat with themselves. The eater types are Stone, Rock, Dirt, Sand/Gravel, Leaves/Water, and one to target Forests. All eater types are configurable for which types of blocks they eat.
+grim.manual.grimworld.subsection.fungus.page.blockEater.title=Block Eaters
+grim.manual.grimworld.subsection.fungus.page.vert=A sub-species of the Block Eaters are the vertical eaters which instead of growing in any direction will not grow any lower than where they were placed. All eater types are configurable for which types of blocks they eat.
+grim.manual.grimworld.subsection.fungus.page.vert.title=Vert Block Eaters
 grim.manual.grimworld.subsection.fungicide=Fungicide
 grim.manual.grimworld.subsection.fungicide.page.fungicide=Fungicide is used if you want to remove large amounts of fungi in an area at once. Once crafted it has unlimited uses and has a range of up to 20 blocks. Just right click and particles will appear in the area that you cleared.
 grim.manual.grimworld.subsection.fungicide.page.fungicide.title=Recipe
