--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -167,6 +167,7 @@ tile.fungus_killing.15.name=Glass Layer Building Fungus
 
 #================= ITEMS =================#
 item.instruction_manual.name=Instruction Manual
+item.brush.name=Brush
 item.soda.apple.name=Apple Soda
 item.soda.bottle.name=Soda Bottle
 item.soda.slurm.name=Slurm
