Add tooltips to all config options. Closes #13 Add blank config to Cuisine so people know that it doesn't any options right now. Closes #14

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -382,21 +382,110 @@ grimpack.tools.cfg=Tools Config
 grimpack.util.cfg=Util Config
 grimpack.world.cfg=World Config
 
+#### Config Tooltips ###
+grimpack.core.cfg.tooltip=Config options for the core part of the Grim Pack
 grimpack.core.cfg.parts=Grim Parts
+Give Instruction Manual on World Join=Give Instruction Manual
+Give Instruction Manual on World Join.tooltip=True if a new player should receive the instruction manual when they join the world
+Show checkmark if available manual page=Show Manual Checkmark
+Show checkmark if available manual page.tooltip=True if when holding the manual a checkmark will appear next the crosshair that tells you if the block, item or entity has a manual page.
+grimpack.core.cfg.parts.tooltip=Here you can disable the individual parts from loading when you start up Minecraft
+Enable cuisine part.tooltip=True to load Minecraft with the cuisine part of the Grim Pack
+Enable decor part.tooltip=True to load Minecraft with the decor part of the Grim Pack
+Enable industry part.tooltip=True to load Minecraft with the industry part of the Grim Pack
+Enable tools part.tooltip=True to load Minecraft with the tools part of the Grim Pack
+Enable util part.tooltip=True to load Minecraft with the util part of the Grim Pack
+Enable world part.tooltip=True to load Minecraft with the world part of the Grim Pack
+
+grimpack.cuisine.cfg.tooltip=Config options for the food part of the Grim Pack
+grimpack.cuisine.cfg.general.blank=NO CONFIG OPTIONS
+grimpack.cuisine.cfg.general.blank.tooltip=Blank option to tell you that there are no config options
+
 grimpack.decor.cfg.general=General Options
 grimpack.decor.cfg.grillrecipes=Custom Grill Recipes
+grimpack.decor.cfg.tooltip=Config options for the decorative part of the Grim Pack
+grimpack.decor.cfg.general.tooltip=Contains many options to customize Grim Decor
+DyeFrames.tooltip=True if you can dye frames
+BurnFrames.tooltip=True if frames can catch on fire and burn
+DyeWallpaper.tooltip=True if wallpaper can be dyed
+CopyDye.tooltip=True if when placing wallpapers are placed next to eachother they will copy the dye along with the wallpaper type
+BurnWallpaper.tooltip=True if wallpaper can catch fire and burn
+NumWallpapers.tooltip=The number of different wallpaper types
+WallpaperWidth.tooltip=This number is how thick the wallpaper should appear on the wall
+UseAllBlocks.tooltip=True if any colorizer block should be able to use the full list of default blocks otherwise it will use the blocks outlined in decoration blocks
+DecorationBlocks.tooltip=The block names to use if UseAllBlocks is false
+grimpack.decor.cfg.InfiniteGrillFuel=Infinite Grill Fuel
+grimpack.decor.cfg.InfiniteGrillFuel.tooltip=True if you want the grill to have infinite fuel.
+grimpack.decor.cfg.grillrecipes.tooltip=Where you can add more grill recipes
 grimpack.decor.cfg.recipes=Grill Recipes
 grimpack.decor.cfg.recipes.tooltip=Use this to add new grill recipes. To add a new recipe end the last one with a ';' then write out the [RawItemName] separated by a '>' then write out the [CookedItemName]. For mod items make sure to add the modID with a colon ':' and the then the item name. Do not end with a ';' or it may cause issues. Example: clay_ball>brick;chocolate:chocolate_ball>chocolate:chocolate_bar
 grimpack.decor.cfg.EnableFirepitNet=Enable Firepit Net
-grimpack.decor.cfg.InfiniteGrillFuel=Infinite Grill Fuel
 grimpack.decor.cfg.IsFireParticles=Is Fire Particles
 grimpack.decor.cfg.EnableFirepitNet.tooltip=True if you want the firepit to have the metal net around it.
-grimpack.decor.cfg.InfiniteGrillFuel.tooltip=True if you want the grill to have infinite fuel.
 grimpack.decor.cfg.IsFireParticles.tooltip=When False the fire when blocks are active are actual fire if true this uses particles instead.
 
+grimpack.industry.cfg.tooltip=Config options for the mechanical part of the Grim Pack
+Generate Uranium.tooltip=True if Uranium ore should generate
+Generate Aluminum.tooltip=True if aluminum ore should generate
+Generate Oil Ore.tooltip=True if oil ore should generate
+Do workbench upgrades double result.tooltip=True if upgraded workbenches should give you double or quadruple the result
+
+grimpack.tools.cfg.tooltip=Config options for the tools and weapons part of the Grim Pack
+Ultimate Fist Damage Against Entity's.tooltip=The amount of damage the the ultimate fist will do against entities
+Ultimate Fist Block Breaking Speed.tooltip=How fast the ultimate fist will break blocks
+Multitool durability multiplier.tooltip=The amount that the default multitool durability should be multiplied by. So, if a multitool is diamond then it will be diamond tools base durability (1562) * this number
+Enable Free Build Mode.tooltip=If building with the wands doesn't require any blocks
+Enable Bedrock Breaking.tooltip=If the breaking wand can break through bedrock
+Enable Easy Mining Obsidian.tooltip=If the wands can break obsidian easily
+Destructive Wand Spared Ores.tooltip=The default ores that the breaking wand won't break
+Mining Wand Ores for Surface Mining.tooltip=The ores that the mining wand can pull up from the surface
+Restrict powerstaff blocks.tooltip=If the powerstaff can't move certain blocks that will be defined by the blocks that the powerstaff is allowed to move.
+Blocks allowed when restrict powerstaff is active.tooltip=If Restrict powerstaff blocks is true then the powerstaff will only be able to move these blocks
+
+grimpack.util.cfg.tooltip=Config options for the utility part of the Grim Pack
+Horizontal Pushing Force.tooltip=The horizontal pushing force when using fusrodah
+Upward Pushing Force.tooltip=The upward pushing force when using a fusrodah
+Enable FusRoDah.tooltip=Can players use fusrodah
+FusRoDah cooldown (seconds).tooltip=The cooldown until you can fusrodah again
+Sound Enabled.tooltip=If the fusrodah should play sound
+Use Original FusRoDah Sound.tooltip=If you wan the longer and more annoying fusrodah sound to be played
+Spawn graves on player death.tooltip=If graves should be spawned when a player dies
+Use Infinite Lava.tooltip=True if lava becomes infinite
+Use Double Doors.tooltip=True if doors, trap doors, and fence gates open as double doors
+Enable Automatic Item Replacer.tooltip=True if the automatic item replacer will replace items when you run out
+
+grimpack.world.cfg.tooltip=Config options for the world generation part of the Grim Pack
 grimpack.world.cfg.general=General Options
+grimpack.world.cfg.general.tooltip=Config options about general world gen and more people spawning
 grimpack.world.cfg.fungus=Fungus Options
+grimpack.world.cfg.fungus.tooltip=Options all about fungus
 grimpack.world.cfg.floatingIslands=Floating Islands Options
+grimpack.world.cfg.floatingIslands.tooltip=Options all about floating islands
+Enable Fire.tooltip=Can corruption blocks spawn fire on top
+Enable Corruption.tooltip=Will corruption blocks corrupt other blocks
+Generate Corruption Blocks.tooltip=Should corruption blocks be generated
+Spawn more people.tooltip=Should Mo' people spawn
+Frequency Wheat Field.tooltip=The frequency that wheat fields will spawn (Larger values are rarer)
+Frequency Saplings.tooltip=The frequency that tree saplings will spawn (Larger values are rarer)
+Frequency Tree Stumps.tooltip=The frequency that tree stumps will spawn (Larger values are rarer)
+Frequency Cactus Fields.tooltip=The frequency that cactus fields will spawn (Larger values are rarer)
+Frequency Sandstone Pillars.tooltip=The frequency that sandstone pillars will spawn in the desert (Larger values are rarer)
+Frequency Sand Pits.tooltip=The frequency that sand pits will spawn in the desert (Larger values are rarer)
+Frequency Melons.tooltip=The frequency that melons will spawn (Larger values are rarer)
+Generate Flat Bedrock Surface.tooltip=Should flat bedrock be used in the overworld
+Generate Flat Bedrock Nether.tooltip=Should flat bedrock be used in the Nether
+Replace Desert Wells.tooltip=Should better desert wells spawn instead of vanilla desert wells
+Spawn Rate.tooltip=Spawn rate of floating islands (Larger values are rarer)
+Size Variance.tooltip=The size variance between floating islands
+Generate Floating Islands.tooltip=If floating islands should generate
+Dirt Eating Whitelist.tooltip=The blocks that the dirt eating fungus will be able to eat
+Smooth Stone Fungus Whitelist.tooltip=The blocks that smoothstone eating fungus can eat
+Water and Leaves Fungus Whitelist.tooltip=The blocks that water and leaves eating fungus can eat
+Sand and Eating Fungus Whitelist.tooltip=The blocks that sand and gravel eating fungus can eat
+Rocks Eating Whitelist.tooltip=The blocks that rock eating fungus can eat
+All Eating Blacklist.tooltip=The blocks that all eating fungus can't eat
+Forest Eating Whitelist.tooltip=The blocks that forest eating fungus can eat
+### END CONFIG TOOLTIPS ###
 
 grimpack.decor.brush.empty=Stored: Empty
 grimpack.decor.brush.stored=Stored: %s
